Update contact address in contact.html

--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
     </p>
 
     <p><strong>Location:</strong><br>
-      Mumbai, Maharashtra, India
+      139/B, Sindhi Society, Chembur, Mumbai, Maharashtra, India
     </p>
 
     <p><strong>Timings:</strong><br>
